<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:attrs="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xuan.csi_homework_4.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout1"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:text="@string/first_monster" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:text="@string/eaten_progress_bar_description"
                    android:layout_weight="4"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_monster_eating_cookies"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"/>
                <TextView
                    android:text="-"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_weight="0.5"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_monster_eaten_cookies"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_monster_eat_time_left"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"/>
                <TextView
                    android:text="s"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_weight="0.5"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_monster_eaten_progress_bar"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:text="@string/second_monster" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:text="@string/eaten_progress_bar_description"
                    android:layout_weight="4" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/second_monster_eating_cookies"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"/>
                <TextView
                    android:text="-"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_weight="0.5"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/second_monster_eaten_cookies"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/second_monster_eat_time_left"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_weight="1" />
                <TextView
                    android:text="s"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_weight="0.5"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/second_monster_eaten_progress_bar"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:text="@string/grandma_oven" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:text="Cookies in jar"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:textAlignment="textEnd"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:textAlignment="textEnd"
                            android:layout_weight="0.5"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:id="@+id/total_cookies_in_jar"
                            android:layout_weight="0.5" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:text="Cookies just baked"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:textAlignment="textEnd"
                            android:layout_weight="1"/>

                        <TextView
                            android:text="+"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:textAlignment="textEnd"
                            android:layout_weight="0.5"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:id="@+id/baked_cookies"
                            android:layout_weight="0.5" />
                    </LinearLayout>
                </LinearLayout>

                <com.github.lzyzsd.circleprogress.DonutProgress
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/baking_time_progress_bar"
                    attrs:donut_suffix_text="@string/donut_suffix_text"
                    attrs:donut_max="@integer/baking_time"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:text="@string/clock"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:id="@+id/time_passed"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:text="@string/total_time"
                    android:layout_weight="2"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/count_down_progress_bar"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/start_over_button"
                android:layout_weight="1"
                android:text="@string/start_over_button"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cancel_button"
                android:layout_weight="1"
                android:text="@string/cancel_button"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
